# teamfaabs-ssl-robot-code

./: .editorconfig  .gitignore  LICENSE  README.md  rustfmt.toml  todo.md  todo.txt
.cargo/: local.toml
firmware/: README.md
teensy_code/: platformio.ini
teensy_code/src/: compass.cpp  main.cpp
tf_jetson/: Cargo.toml
tf_jetsoncode/: Cargo.toml  Cross.toml  Makefile  config.toml  deploy.sh  deployment.md  tf_jetsoncode.service
tf_jetsoncode/src/: communication.rs  config.rs  lib.rs  main.rs  proto.rs  robot_logic.rs  utils.rs
tf_jetsoncode/src/communication/: receive_cp.rs  receive_onboard_vision.rs  send_cp.rs  teensy_communication.rs
tf_jetsoncode/src/robot_logic/: ball_logic.rs  defense.rs  get_ball.rs  goalie.rs  helpers.rs  orca.rs  receive_ball.rs  vec.rs
