[package]
name = "tf_jetsoncode"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.2", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
prost = "0.14.3"
prost-types = "0.14.3"
toml = "1.1.2"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
hidapi = { version = "2.6.5", default-features = false, features = ["linux-static-libusb"] }
